working version of navbar and footer

--- a/murskadekla/templates/index.html
+++ b/murskadekla/templates/index.html
@@ -4,8 +4,7 @@
 {% block title %}Murska Dekla gin{% endblock %}
 
 {% block content %}
-    <img src="{% static 'img/limun.png' %}" alt="My image">
-    <h1>
+    <h1 style="height: 1000px">
         Template Homepage
     </h1>
 {% endblock %}
