--- a/murskadekla/templates/index.html
+++ b/murskadekla/templates/index.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Murska Dekla gin{% endblock %}
-
 {% block content %}
-    <h1 style="height: 1000px">
+    <section style="height: 1000px">
         Template Homepage
-    </h1>
+
+    </section>
 {% endblock %}
