--- a/murskadekla/templates/navbar.html
+++ b/murskadekla/templates/navbar.html
@@ -13,19 +13,19 @@
         <div class="navbar-collapse">
             <ul class="navbar-nav middle_nav_bar">
                 <li class="nav-item">
-                    <a class="nav-link" id="our_story"><strong>OUR STORY</strong></a>
+                    <a class="nav-link" id="our_story" href="{% url  'public:our_story' %}"><strong>OUR STORY</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="products"><strong>PRODUCTS</strong></a>
+                    <a class="nav-link" id="products" href="{% url  'public:products' %}"><strong>PRODUCTS</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="drinks"><strong>DRINKS</strong></a>
+                    <a class="nav-link" id="drinks" href="{% url  'public:drinks' %}"><strong>DRINKS</strong></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="plant_a_tree"><strong>PLANT A TREE</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="contact"><strong>CONTACT</strong></a>
+                    <a class="nav-link" id="contact" href="{% url  'public:contact' %}"><strong>CONTACT</strong></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="store"><strong>STORE</strong></a>
