--- a/murskadekla/templates/base.html
+++ b/murskadekla/templates/base.html
@@ -17,9 +17,20 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-    <script src="{% static 'js/jquery-3.5.1.js' %}"></script>
-    <script src="{% static 'js/document_ready.js' %}"></script>
-    <script src="{% static 'js/links.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/dividers.css' %}">
+    <link rel="stylesheet" href="{% static 'css/contact.css' %}">
+    <link rel="stylesheet" href="{% static 'css/buttons.css' %}">
+    <link rel="stylesheet" href="{% static 'css/our_story.css' %}">
+    <link rel="stylesheet" href="{% static 'css/products.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cookiealert.css' %}">
+    {% if anchor %}
+        <script type="text/javascript">
+        $(document).ready(function () {
+            window.location = '#{{ anchor }}'
+        });
+        </script>
+    {% endif %}
 </head>
 <body>
     {% include 'navbar.html' %}
@@ -28,5 +39,10 @@
         {% endblock %}
     </main>
     {% include 'footer.html' %}
+    {% include 'cookiealert.html' %}
+    <script src="{% static 'js/jquery-3.5.1.js' %}"></script>
+    <script src="{% static 'js/document_ready.js' %}"></script>
+    <script src="{% static 'js/links.js' %}"></script>
+    <script src="{% static 'js/cookiealert.js' %}"></script>
 </body>
 </html>
