--- a/murskadekla/templates/drinks.html
+++ b/murskadekla/templates/drinks.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Drinks{% endblock %}
-
 {% block content %}
-    <h1>
+    <section style="height: 1000px">
         Drinks Homepage
-    </h1>
+    </section>
 {% endblock %}
