--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,53 @@ body {
     margin: 0;
     font-size: 1rem;
     font-weight: 400;
-    color: rgba(255,255,255,0.75);
+    color: rgba(0, 0, 0, 1);
     text-align: left;
+    background-color: rgb(0,0,0);
+}
+
+section > .row {
+    display: flex;
+    max-width: 63em;
+    flex-direction: row;
+    flex-grow: 1;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+section > .col {
+    display: flex;
+    max-width: 63em;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+section.white {
     background-color: rgb(255,255,255);
+}
+
+section.black {
+    background-color: rgb(0,0,0);
+}
+
+section {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (max-width: 962px) {
+    section.first {
+        padding-top: 8em;
+    }
+}
+
+@media screen and (min-width: 963px) {
+    section.first {
+        padding-top: 10em;
+    }
 }
