--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -65,6 +65,7 @@
 .navbar-nav .nav-link {
     color: rgba(255,255,255,0.75);
     cursor: pointer;
+    text-decoration: none;
 }
 
 .navbar-nav .nav-link:focus, .navbar-nav .nav-link:hover {
@@ -252,12 +253,18 @@
         cursor: pointer;
     }
 
-    .navbar-collapse {
+    .navbar-collapse.active {
+        display: -ms-flexbox!important;
+        display: flex!important;
         flex-direction: column;
         width: 100%;
         position: absolute;
         top: 6em;
         margin-left: 1em;
+    }
+
+    .navbar-collapse {
+        display: none;
     }
 
     .navbar-nav.middle_nav_bar {
