--- a/murskadekla/templates/base.html
+++ b/murskadekla/templates/base.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="{% static 'css/products.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/cookiealert.css' %}">
+    <link rel="stylesheet" href="{% static 'css/legalage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/drinks.css' %}">
     {% if anchor %}
         <script type="text/javascript">
         $(document).ready(function () {
@@ -40,6 +42,7 @@
     </main>
     {% include 'footer.html' %}
     {% include 'cookiealert.html' %}
+    {% include 'legalage.html' %}
     <script src="{% static 'js/jquery-3.5.1.js' %}"></script>
     <script src="{% static 'js/document_ready.js' %}"></script>
     <script src="{% static 'js/links.js' %}"></script>
