--- a/murskadekla/templates/products.html
+++ b/murskadekla/templates/products.html
@@ -6,4 +6,115 @@
         <div class="products banner" style="background-image: url({% static 'img/products_banner.jpg' %})"></div>
         <div class="plain_divider big" style="background-image: url({% static 'img/divider.svg' %});"></div>
     </section>
+    <section class="white">
+        <div class="row md-product">
+            <div class="md-product-image-container">
+                <img class="md-product-image" src="{% static 'img/MurskaDeklaLDG.jpg' %}">
+            </div>
+            <div class="md-product-herbs md-ldg">
+                <div class="md-product-herb">
+                    <img src="{% static 'img/borovica.png' %}">
+                    <p>Juniper Berries</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/korijander.png' %}">
+                    <p>Coriander</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/angelika.png' %}">
+                    <p>Angelica root</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/sladic.png' %}">
+                    <p>Liquorice</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/limun.png' %}">
+                    <p>Lemon Peel</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/naranca.png' %}">
+                    <p>Orange Peel</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/limunska_trava.png' %}">
+                    <p>Lemon Grass</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/loza.png' %}">
+                    <p>Vine leaf</p>
+                </div>
+            </div>
+            <div class="md-product-text">
+                <p class="heading" style="background-image: url({% static 'img/line_top_black.svg' %});"><strong>LONDON DRY GIN 42% ABV</strong></p>
+                <p class="content">Murska Dekla London dry gin is the first gin in the family named after a mystic creature from Međimurje, a fairy, a spirit of water and goddess of nature. Like its namesake fairy, our gin carries the secrets of nature, the secret recipe
+                    that distills a wealth of herbs.</p>
+                <div class="second_divider" style="background-image: url({% static 'img/split_line.svg' %});"></div>
+                <p class="content">In the creation of this drink, we took great care in picking ingredients of local and organic origin. Only the best of nature’s gifts was extracted through traditional distillation in copper pot stills. Finally, we were rewarded with a
+                    first-class London dry of supreme taste. Enjoy it mixed with tonic water, in one of our exclusive cocktails, or simply on rocks.<br></p>
+                <div class="md-awards">
+                    <img class="award-image" src="{% static 'img/md-ldg-2020-silver91.png' %}">
+                </div>
+            </div>
+        </div>
+        <div class="row plain_divider small" style="background-image: url({% static 'img/divider.svg' %});"></div>
+        <div class="row md-product">
+            <div class="md-product-image-container">
+                <img class="md-product-image" src="{% static 'img/MurskaDeklaLDG.jpg' %}">
+            </div>
+            <div class="md-product-herbs md-otg">
+                <div class="md-product-herb">
+                    <img src="{% static 'img/borovica.png' %}">
+                    <p>Juniper Berries</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/korijander.png' %}">
+                    <p>Coriander</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/angelika.png' %}">
+                    <p>Angelica root</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/sladic.png' %}">
+                    <p>Liquorice</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/limun.png' %}">
+                    <p>Lemon Peel</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/naranca.png' %}">
+                    <p>Orange Peel</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/limunska_trava.png' %}">
+                    <p>Lemon Grass</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/loza.png' %}">
+                    <p>Vine leaf</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/loza.png' %}">
+                    <p>Parsley leaf</p>
+                </div>
+                <div class="md-product-herb">
+                    <img src="{% static 'img/loza.png' %}">
+                    <p>Chamomile</p>
+                </div>
+            </div>
+            <div class="md-product-text">
+                <p class="heading" style="background-image: url({% static 'img/line_top_black.svg' %});"><strong>OLD TOM GIN 48% ABV</strong></p>
+                <p class="content">Murska Dekla London dry gin is the first gin in the family named after a mystic creature from Međimurje, a fairy, a spirit of water and goddess of nature. Like its namesake fairy, our gin carries the secrets of nature, the secret recipe
+                    that distills a wealth of herbs.</p>
+                <div class="second_divider" style="background-image: url({% static 'img/split_line.svg' %});"></div>
+                <p class="content">In the creation of this drink, we took great care in picking ingredients of local and organic origin. Only the best of nature’s gifts was extracted through traditional distillation in copper pot stills. Finally, we were rewarded with a
+                    first-class London dry of supreme taste. Enjoy it mixed with tonic water, in one of our exclusive cocktails, or simply on rocks.<br></p>
+                <div class="md-awards">
+                    <img class="award-image" src="{% static 'img/md-ldg-2020-silver91.png' %}">
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
