--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -107,7 +107,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
   }
 }
 
-@media screen and (max-width: 962px) {
+@media (max-width: 962px) {
     #contact_row {
         flex-direction: column;
     }
@@ -124,7 +124,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     }
 }
 
-@media screen and (min-width: 963px) {
+@media (min-width: 963px) {
     #contact_row {
         flex-direction: row;
     }
