--- a/static/css/login.css
+++ b/static/css/login.css
@@ -6,14 +6,14 @@
     height: 70vh;
 }
 
-@media screen and (max-width: 962px) {
+@media (max-width: 962px) {
     .login-page {
         display: flex;
         flex-direction: column;
     }
 }
 
-@media screen and (min-width: 963px) {
+@media (min-width: 963px) {
     .login-page {
         display: flex;
         flex-direction: row;
