--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -138,7 +138,7 @@
     background: rgba(255, 255, 255, 0.75);
 }
 
-@media screen and (min-width: 963px) {
+@media (min-width: 963px) {
     .nabar-logo {
         display: -ms-flexbox!important;
         display: flex!important;
@@ -217,7 +217,7 @@
     }
 }
 
-@media screen and (max-width: 962px) {
+@media (max-width: 962px) {
     .nabar-logo {
         position: absolute;
     }
