--- a/static/css/our_story.css
+++ b/static/css/our_story.css
@@ -12,7 +12,7 @@
     padding-bottom: 2em;
 }
 
-@media screen and (max-width: 962px) {
+@media (max-width: 962px) {
     .our_story.text_container {
         display: flex;
         flex: 100%;
@@ -27,7 +27,7 @@
     }
 }
 
-@media screen and (min-width: 963px) {
+@media (min-width: 963px) {
     .our_story.text_container {
         display: flex;
         flex: 50%;
